# sb_mcp

./: .gitignore  dodo.py  flake.nix  pyproject.toml
nix/: mcp-probe-cargo-lock.patch
src/sb_mcp/: __main__.py
